# open-mission

./: .env.example  .gitignore  .mcp.json  .mission.code-workspace  .prettierignore  BRANCH_HANDOFF.md  CONTEXT.md  Factory.ts  Mission.test.ts  Mission.ts  MissionEntity.test.ts  MissionPreparationService.ts  MissionSession.ts  README.md  eslint.config.mjs  manifest.ts  mission  mission.cmd  mission.code-workspace  missiond  missiond.cmd  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preset.ts  turbo.json  vitest.config.ts  workflow.ts
.agents/: constitution.md
.changeset/: 25-generate-a-documentat-added-docs-route-in-web-app-work-mo7pdqxr.md  config.json  pre.json  proper-cicd-pipeline.md  zod-surreal-alpha-publish.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.logs/: daemon-dev.out
.mission/: settings.json
.missions/: settings.json
.pi/: settings.json
apps/cli/: mission  missiond  (+4 more)
apps/native/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/fallback-dist/: index.html
apps/native/src-tauri/src/: main.rs
docker/: Dockerfile.app  Dockerfile.development  docker-compose.development.yml  start-open-mission-app.sh
docs/: _config.yml  index.md
docs-previous/: _config.yml  index.md
scripts/: check-linux-native-env.sh  daemon-watch-dev.mjs  dev-airport.mjs  dev-container-post-start.sh  repair-node-pty-helper-permissions.mjs  start-virtual-linux-desktop.sh  stop-virtual-linux-desktop.sh
(+1306 files in other folders)
