[package]
name = "open-mission-native"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Open Mission native host"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
